# timsseek

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  rustfmt.toml  sample_fasta_config.json  sample_speclib_config.json
data/: .gitignore
speclib_build/: .gitignore  build_speclib.py  pyproject.toml
src/: errors.rs  isotopes.rs  lib.rs  main.rs  models.rs
src/data_sources/: mod.rs  speclib.rs
src/digest/: digestion.rs  mod.rs
src/fragment_mass/: elution_group_converter.rs  fragment_mass_builder.rs  mod.rs
src/protein/: fasta.rs  mod.rs  models.rs
src/scoring/: mod.rs  search_results.rs
src/tui/: main.rs
tui/: datatable.rs  main.rs  mod.rs  plottable_chromatograms.rs
