[package]
name = "timsseek"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyms = "0.8.3"
# timsquery = { git = "https://github.com/talusbio/timsquery.git", tag = "v0.4.0" }
timsquery = { path = "../timsquery" } 
rayon = "1.5"
clap = { version = "4.5.17", features = ["derive"], optional = true }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
log = "0.4.22"
env_logger = "0.11.5"

ratatui = { version = "0.28.1", optional = true }
crossterm = { version = "0.28.1", optional = true }
regex = "1.10.6"
csv = "1.3.0"

[features]
default = ["cli"]
cli = ["dep:clap"]
tui = ["dep:ratatui", "dep:crossterm", "cli"]

[profile.release]
lto = 'thin'
codegen-units = 1
