[project]
name = "speclib_build"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "rich",
  "tqdm",
  "elfragmentadonnx",
  "pyteomics",
  "elfragmentador_core",
  "cloudpathlib[s3]",
  "boto3",
]

[tool.uv.sources]
elfragmentadonnx = { path = "/Users/sebastianpaez/git/2024_dev_talus_prospect/python_packages/dist/elfragmentadonnx-0.21.25-py3-none-any.whl" }
elfragmentador_core = { path = "/Users/sebastianpaez/git/2024_dev_talus_prospect/python_packages/dist/elfragmentador_core-0.21.25-py3-none-any.whl" }
